# distributed_training

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
distbench/: __init__.py  config.py  data.py  distributed.py  memory.py  metrics.py  model.py  plot.py  profiling.py  sweep.py  train.py
docker/: Dockerfile  entrypoint.sh
docs/: 01_ddp_vs_fsdp.md  02_metrics.md  03_aws_runbook.md  04_brev_runbook.md  05_experiment_plan.md
launch/: capture_comm.sh  make_report.sh  run_all.sh  run_local_cpu.sh  run_single.sh  run_slurm.sbatch  run_sweep.sh  run_torchrun.sh  spawn_local.py
notebooks/: colab.ipynb
results/examples/data/: ddp_1b_ws1.json  ddp_1b_ws2.json  ddp_1b_ws4.json  ddp_1b_ws8.json  ddp_8b_ws1.json  ddp_8b_ws2.json  fsdp_1b_ws1.json  fsdp_1b_ws2.json  fsdp_1b_ws4.json  fsdp_1b_ws8.json  fsdp_8b_ws2.json  fsdp_8b_ws4.json  fsdp_8b_ws8.json  single_1b_ws1.json  sweep_summary.json
results/old_gpu_run_degraded_node/: README.md
results/old_gpu_run_degraded_node/data/: ddp_1b_ws1.json  ddp_1b_ws2.json  ddp_1b_ws8.json  ddp_8b_ws4.json  ddp_8b_ws8.json  fsdp_1b_ws2.json  fsdp_1b_ws4.json  fsdp_1b_ws8.json  fsdp_8b_ws1.json  fsdp_8b_ws2.json  fsdp_8b_ws4.json  sweep_summary.json
